--- a/instructor_materials/IDM232-W04.md
+++ b/instructor_materials/IDM232-W04.md
@@ -28,17 +28,19 @@ theme: Plain Jane, 2
 - Forms
 - Cookies
 
-^ There's URL's and links. There's forms, web forms that you fill out with information and click submit, and then there's cookies. Those are browser cookies that are stored on the browser. And each one of these corresponds to an HTTP method.
+^ (_click_) There's URL's and links. (_click_) There's forms, web forms that you fill out with information and click submit, and then there's (_click_) cookies. Those are browser cookies that are stored on the browser. And each one of these corresponds to an HTTP method.
 
 ---
 
 ## Links and URLs
 
-    URLs / Links    GET
-    Forms           POST
-    Cookies         COOKIE
+| Type | Method |
+|:----:|:------:|
+| URLs / Links | GET |
+| Forms | POST |
+| Cookies | COOKIE |
 
-^ The first is Get, the second is Post and the last is Cookie. So, URLs and Links are Get requests, a form is a Post request. And Cookie, well, it's not really a cookie request, but it's the way that we access the cookie information that piggybacks on each request. So, these are the three main things that we're going to be looking at. Now, every web language has a different way to interact with these three types of user data. We'll start by looking at URLs and links. (build _links/page1.php|page2.php_)
+^ The first is Get, the second is Post and the last is Cookie. So, URLs and Links are Get requests, a form is a Post request. And Cookie, well, it's not really a cookie request, but it's the way that we access the cookie information that piggybacks on each request. So, these are the three main things that we're going to be looking at. Now, every web language has a different way to interact with these three types of user data. We'll start by looking at URLs and links. (_examples/week4/links/page1.php_)
 
 ---
 
@@ -79,7 +81,7 @@ http://google.com/search?q=php
   - Always available in all scopes
   - Assigned by PHP before processing page code
 
-^ That array is what is called a Super global variable. We've talked about global variables before and we saw how we needed to call global on them to bring them into the local scope. Well super global's are always available in all scopes and PHP set's them for us before the page even starts processing. There are about nine super globals altogether. And we'll be looking at several of them later in this training. But right now we're only concerned with the super global that relates to the variables passed to the page via those URL parameters. And that one is called **GET**.
+^ That array is what is called a (_click_) Super global variable. We've talked about global variables before and we saw how we needed to call global on them to bring them into the local scope. Well super global's are always available in all scopes and PHP set's them for us before the page even starts processing. There are about nine super globals altogether. And we'll be looking at several of them later in this class. But right now we're only concerned with the super global that relates to the variables passed to the page via those URL parameters. And that one is called **GET**.
 
 ---
 
@@ -89,7 +91,7 @@ http://google.com/search?q=php
 $_GET
 ```
 
-^ And that makes sense, because GET is the HTTP method that relates to URLs and links. And the way that we access it is with dollar sign, underscore and then all capitals GET. That's the name of the super global where the query parameters are put by PHP. Notice the underscore that's in the beginning. That's how all super globals are going to be named. This is why when we discussed naming your variables I recommended not starting your variable names with underscores; it will help these super globals really stand out. Let's see how we access these now. (return to _page1.php_ and _page2.php_)
+^ And that makes sense, because GET is the HTTP method that relates to URLs and links. And the way that we access it is with dollar sign, underscore and then all capitals GET. That's the name of the super global where the query parameters are put by PHP. Notice the underscore that's in the beginning. That's how all super globals are going to be named. This is why when we discussed naming your variables I recommended not starting your variable names with underscores; it will help these super globals really stand out. Let's see how we access these now. (return to _examples/week4/links/page1.php_ and _page2.php_)
 
 ---
 
@@ -172,7 +174,7 @@ urlencode($string);
 - Reserved characters become % + 2-digit hexadecimal
 - Spaces become "+"
 
-^ So, `urlencode` is going to take letters, number, underscores and dashes and let them pass through completely unchanged. But those reserve characters, that we just saw, are going to become their hexadecimal equivalent. That percent sign, follow by two digit hexadecimal digit number. And spaces are going to become plus signs. Remember that, because that's going to be important in a minute. We'll talk about that. Let's try using it. (_urlencode/encode1.php_ | _encode2.php_)
+^ So, `urlencode` is going to take (_click_) letters, number, underscores and dashes and let them pass through completely unchanged. (_click_) But those reserve characters, that we just saw, are going to become their hexadecimal equivalent. That percent sign, follow by two digit hexadecimal digit number. (_click_) And spaces are going to become plus signs. Remember that, because that's going to be important in a minute. We'll talk about that. Let's try using it. (_examples/week4/urlencode/encode1.php_ | _encode2.php_)
 
 ---
 
@@ -194,7 +196,7 @@ urlencode($string);
 - Reserved characters become % + 2-digit hexadecimal
 - Spaces become "+"
 
-^ So, if we take a look at what we had for `urlencode`, we saw that letters, numbers, underscores, and dashes are unchanged. It converts the reserved characters and spaces become plus.
+^ So, if we take a look at what we had for `urlencode`, (_click_) we saw that letters, numbers, underscores, and dashes are unchanged. (_click_) It converts the reserved characters and (_click_) spaces become plus.
 
 ---
 
@@ -204,7 +206,7 @@ urlencode($string);
 - Reserved characters become % + 2-digit hexadecimal
 - Spaces become "%20"
 
-^ With `rawurlencode`, letters, numbers, underscore and dash are unchanged. The reserved characters get converted but, here's the big difference. Spaces become percent 20. They get encoded into a two-digit hexadecimal also instead of using the plus. It may seem like a minor point, but it does make some big differences. It's easy for us to try it. (_urlencode/encode1.php_)
+^ With `rawurlencode`, (_click_) letters, numbers, underscore and dash are unchanged. (_click_) The reserved characters get converted but, here's the big difference. (_click_) Spaces become percent 20. They get encoded into a two-digit hexadecimal also instead of using the plus. It may seem like a minor point, but it does make some big differences. It's easy for us to try it. (_examples/week4/urlencode/encode1.php_)
 
 ---
 
@@ -219,9 +221,9 @@ urlencode($string);
 
 ^ So, now that we understand the difference. One send pluses, one sends percent 20. You're probably wondering, when should you use each one? Well, here's my guideline for you.
 
-^ You're going to want to use `rawurlencode` on the path, that's the portion that comes before the question mark. So, everything comes before that, if there's anything dynamic in there that you're generating, like the page name. That is all going to be done with raw URL encoding, because the spaces must be encoded as %20 for the final system to be able to find that file. For Apache to be able to locate the PHP page you're looking for, it needs it as %20.
+^ (_click_) You're going to want to use `rawurlencode` on the path, that's the portion that comes before the question mark. So, everything comes before that, if there's anything dynamic in there that you're generating, like the page name. That is all going to be done with raw URL encoding, because the spaces must be encoded as %20 for the final system to be able to find that file. For Apache to be able to locate the PHP page you're looking for, it needs it as %20.
 
-^ But, you want to use `urlencode` on the query string. That's everything that comes after question mark. That's because spaces are better encoded as plus. (_urlencode/encode3.php_)
+^ (_click_) But, you want to use `urlencode` on the query string. That's everything that comes after question mark. That's because spaces are better encoded as plus. (_examples/week4/urlencode/encode3.php_)
 
 ---
 
@@ -248,12 +250,7 @@ urlencode($string);
 
 ---
 
-### Reserved Characters in HTML
-
-    <
-    >
-    &
-    "
+# [fit] < > & "
 
 ^ There are 4 characters that are reserved characters in HTML. They're the less than sign, the greater than sign, the ampersand, and the double quote. Mostly it's going to be the less than and greater than sign that we're most concerned with. But we're going to go ahead and take care of all four of these. So that they don't cause problems for us. Now the way that we'll do that is we're going to encode them. It's the same strategy that we used with the URL string. But it's completely different. Different set of characters, different encoding. But the idea is the same. We're rendering them harmless. When we encode them for HTML we're going to do the encoding differently.
 
@@ -275,7 +272,7 @@ urlencode($string);
 - `htmlspecialchars()`
 - `htmlentities()`
 
-^ We can encode HTML using two functions of PHP. The first one we'll look at is HTML special chars short for characters. And the other one is HTML entities.
+^ We can encode HTML using two functions of PHP. (_click_) The first one we'll look at is HTML special chars short for characters. (_click_) And the other one is HTML entities.
 
 ---
 
@@ -368,11 +365,13 @@ $url .= "&" . "param2=" . urlencode($param2);
 </a>
 ```
 
-^ We also need to use `htmlspecialchars` to make sure we can display our HTML text that may include special characters. Now our URL and our HTML are safe to use as a link (_encode-full.php_).
+^ We also need to use `htmlspecialchars` to make sure we can display our HTML text that may include special characters. Now our URL and our HTML are safe to use as a link (_examples/week4/encode-full.php_).
 
 ---
 
 ## Including are Requiring Files
+
+^ Let's change gears.
 
 ^ One of the most useful features in PHP is the ability to include code from other files into a PHP page. It may not be obvious why that's so great, but it's an important feature because it's going to help us to stay organized and to not repeat ourselves. For example, if you define a function for one page of your site and then you need that same function again on another page. It's much better to be able to access the same function from both places, exact same code. Instead of copying and pasting the code into the second page so you can use it again. A copy is going to mean that if we find a bug or make an improvement to the function. Then we have to remember to update the code in more than one place, and that leads to bugs and code that's hard to maintain.
 
@@ -390,27 +389,27 @@ $url .= "&" . "param2=" . urlencode($param2);
 - Layout sections
 - Reusable HTML/PHP code
 
-^ I would say that the good things to include would be functions, because then we can define them once and only once, and they can be broken up by type. We could have our form functions, and our database functions, our general functions, right? We could have several different files of functions.
+^ I would say that the good things to include would be (_click_) functions, because then we can define them once and only once, and they can be broken up by type. We could have our form functions, and our database functions, our general functions, right? We could have several different files of functions.
 
-^ We could have layout sections of the page, the header, the footer, maybe there's a side bar that has navigation elements on. That's common to all pages, that could also be included. Reusable bits of html PHP code, this could be banner ads, page analytics. It could be little snippets of HTML/PHP, like maybe you're going to display a bunch of images. All those images are going to have titles underneath them that are all formatted a certain way. Well you could to use that throughout your site, over and over and over again.
+^ We could have (_click_) layout sections of the page, the header, the footer, maybe there's a side bar that has navigation elements on. That's common to all pages, that could also be included. (_click_) Reusable bits of html PHP code, this could be banner ads, page analytics. It could be little snippets of HTML/PHP, like maybe you're going to display a bunch of images. All those images are going to have titles underneath them that are all formatted a certain way. Well you could to use that throughout your site, over and over and over again.
 
 ---
 
 ## `require()`
 
-^ In addition to include, there are three variations on it that are important for us to look at. The first is require. Require does exactly the same thing as include, but it raises a fatal page error if the file can't be found. It says, look it really is required. This page will not be able to go forward if you can't get this file, so require it. Include doesn't do that. Include will try to load the file, but if it can't find it, well it'll just keep on going anyway. Now it might cause an error later on the page if we try and call a function or something that isn't defined. But include itself won't throw the error, require will.
+^ In addition to include, there are three variations on it that are important for us to look at. The first is require. Require does exactly the same thing as include, but it raises a fatal page error if the file can't be found. It says, "look it really is required". This page will not be able to go forward if you can't get this file, so require it. Include doesn't do that. Include will try to load the file, but if it can't find it, well it'll just keep on going anyway. Now it might cause an error later on the page if we try and call a function or something that isn't defined. But include itself won't throw the error, require will.
 
 ---
 
 ## `include_once()`
 
-^ Another variation is include_once. Include_once keeps an array of paths to the files that it has already included. So as it includes a file, it just adds that file path to an array. And then if we asked to include it again, it will ignore it, because it sees that it has already included it before. This is great to use with functions, because we can't define functions more than once without getting an error.
+^ Another variation is `include_once`. Include once keeps an array of paths to the files that it has already included. So as it includes a file, it just adds that file path to an array. And then if we asked to include it again, it will ignore it, because it sees that it has already included it before. This is great to use with functions, because we can't define functions more than once without getting an error.
 
 ---
 
 ## `require_once()`
 
-^ And then of course there's the combination of those which is require_once. The same idea, but we're requiring it, instead of just including it.
+^ And then of course there's the combination of those which is `require_once`. The same idea, but we're requiring it, instead of just including it.
 
 ---
 
@@ -483,9 +482,11 @@ if ($logged_in == 1) {
 
 ## Data Input
 
-    URLs / Links    GET
-    Forms           POST
-    Cookies         COOKIE
+| Type | Method |
+|:----:|:------:|
+| URLs / Links | GET |
+| Forms | POST |
+| Cookies | COOKIE |
 
 ^ This represents the second way that we can get data back from a user. They can either click a link, or type a URL, which is basically the same thing. Or they can submit a web form to us. You remember that URL and links are GET requests, and submitting a form is going to be a POST request. With GET request we saw that PHP automatically took all of the query parameters and put them into an associated array assigned to the super global GET. PHP is going to do the exact same thing for us with POST request by using the super global POST.
 
@@ -493,7 +494,7 @@ if ($logged_in == 1) {
 
 ## `$_POST`
 
-^ That's the dollar sign, underscore followed by capitals POST. All the values posted in the form data will be in that associative array, ready for us to access, just like we did with the links. So, if a form has a first name input field, then we'll be able to ask the POST super global for the key that matches the input field name. When we submit forms, there's generally going to be two pages, one page which has the web form on it, ready to be filled out. And then, a second page that does the processing of the form. Let's trying building an example. (_week4/forms/form.php_)
+^ That's the dollar sign, underscore followed by capitals POST. All the values posted in the form data will be in that associative array, ready for us to access, just like we did with the links. So, if a form has a first name input field, then we'll be able to ask the POST super global for the key that matches the input field name. When we submit forms, there's generally going to be two pages, one page which has the web form on it, ready to be filled out. And then, a second page that does the processing of the form. Let's trying building an example. (_exmaples/week4/forms/form.php_)
 
 ---
 
@@ -504,13 +505,13 @@ if ($logged_in == 1) {
   - Return error messages
   - Populate fields with previous values
 
-^ We don't have to have two pages for the process either. In some cases you may want to have a single page that contains both the form and the form processing; essentially we'll have a form that submits to itself. One of the benefits is that all of the logic related to the form is in one file (_click_). It also makes it easy to redisplay the form if there are errors (_click_). So let's say we had a login form, if there are errors logging in we can easily (_click_) return those error messages, and (_click_) repopulate the form with the values the user previously entered. (_week4/forms/form_single-01.php_)
+^ We don't have to have two pages for the process either. In some cases you may want to have a single page that contains both the form and the form processing; essentially we'll have a form that submits to itself. One of the benefits is that all of the logic related to the form is in one file (_click_). It also makes it easy to redisplay the form if there are errors (_click_). So let's say we had a login form, if there are errors logging in we can easily return those error messages, and repopulate the form with the values the user previously entered. (_exmaples/week4/forms/form\_single-01.php_)
 
 ---
 
 ## Validating Form Values
 
-^ When we accept data from users especially from web forms, let's say, submit, we almost never want to just accept any old data that they send In fact, it's to our benefit as developers to assume that users are sending us the worst kinds of data possible, that may be even trying to hack our site and do us harm. Checking the submitted data carefully is the road to having robust and secure code. So we need to spend some time thinking about requirements for our data and learning how to enforce those requirements. I promise you're going to spend significant time on this for every project that you do, so it's worth investing the time in learning how to do it and to avoid the pitfalls. Imposing data requirements is called validating our data, and you'll hear me refer to the process as validations or passing or failing our validations. If data passes validations, it means that data was acceptable and we can use it. If it fails validations, that means there was a problem and we need to reject it. And most often that means going back to the user to ask them to make revisions and submit it again.
+^ When we accept data from users especially from web forms, we almost never want to just accept any old data that they send. In fact, it's to our benefit as developers to assume that users are sending us the worst kinds of data possible, that may be even trying to hack our site and do us harm. Checking the submitted data carefully is the road to having robust and secure code. So we need to spend some time thinking about requirements for our data and learning how to enforce those requirements. I promise you're going to spend significant time on this for every project that you do, so it's worth investing the time in learning how to do it and to avoid the pitfalls. Imposing data requirements is called validating our data, and you'll hear me refer to the process as validations or passing or failing our validations. If data passes validations, it means that data was acceptable and we can use it. If it fails validations, that means there was a problem and we need to reject it. And most often that means going back to the user to ask them to make revisions and submit it again.
 
 ---
 
@@ -644,23 +645,23 @@ if (!is_string($value)) {
 
 ---
 
- ### Inclusion in a set
+### Inclusion in a set
 
- ```php
- $value = "1";
- $set = array("1", "2", "3" "4");
- if (!in_array($value, $set)) {
-   echo "Validation failed!";
- }
- ```
+```php
+$value = "1";
+$set = array("1", "2", "3" "4");
+if (!in_array($value, $set)) {
+ echo "Validation failed!";
+}
+```
 
- ^ For inclusion within a set, we have a value and then we have an array and we're going to check if our `$value` appears anywhere within that array. So we can use the `in_array` function, we'll actually check if our value is NOT in the array, and if it's not our validation will fail.
+^ For inclusion within a set, we have a value and then we have an array and we're going to check if our `$value` appears anywhere within that array. So we can use the `in_array` function, we'll actually check if our value is NOT in the array, and if it's not our validation will fail.
 
  ---
 
- ### Format
+### Format
 
- ```php
+```php
 if (preg_match("/PHP/", "PHP is fun.")) {
   echo "A match was found.";
 } else {
@@ -668,24 +669,23 @@ if (preg_match("/PHP/", "PHP is fun.")) {
 }
 
 // A match was found.
- ```
+```
 
- ^ Now, for format, I want to teach you a new function. It's a little bit of a high-level function, but it's very useful. And it's `preg_match`. And what we're doing is we're applying a regular expression to see if something matches. So here's the format. We provide a regular expression and the subject we want to match, and it returns true whether it matches or not. So in this example I'm going to match whether "PHP" is inside "PHP is fun". And it will either say match was found or match was not found. You have to supply the expression you're searching for inside the slashes.
+^ Now, for format, I want to teach you a new function. It's a little bit of a high-level function, but it's very useful. And it's `preg_match`. And what we're doing is we're applying a regular expression to see if something matches. So here's the format. We provide a regular expression and the subject we want to match, and it returns true whether it matches or not. So in this example I'm going to match whether "PHP" is inside "PHP is fun". And it will either say match was found or match was not found. You have to supply the expression you're searching for inside the slashes.
 
  ---
 
+### Format
 
-  ### Format
+```php
+if (preg_match("/PHPx/", "PHP is fun.")) {
+ echo "A match was found.";
+} else {
+ echo "A match was not found."
+}
 
-  ```php
- if (preg_match("/PHPx/", "PHP is fun.")) {
-   echo "A match was found.";
- } else {
-   echo "A match was not found."
- }
-
- // A match was not found.
-  ```
+// A match was not found.
+```
 
 ^ Same example as before but now we're searching for "PHPx", which will not be found.
 
